--- a/lib/sealed_secrets.org
+++ b/lib/sealed_secrets.org
@@ -9,5 +9,5 @@ You should have already installed the command line client (See =Workstation
 Tools=). Now it's time to install the cluster side portion:
 
 #+begin_src shell :noweb yes :eval never-export :exports code
-echo kubectl --kubeconfig=<<KUBE_CONFIG>> apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/<<SEALED_SECRETS_VERSION>>/controller.yaml
+kubectl --kubeconfig=<<KUBE_CONFIG>> apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/<<SEALED_SECRETS_VERSION>>/controller.yaml
 #+end_src
