--- a/lib/rook.org
+++ b/lib/rook.org
@@ -40,7 +40,6 @@ local-path-provisoner. [[https://marcbrandner.com/blog/your-very-own-kubernetes-
 describes this setup in detph]], much of which will be mirrored here in this
 document.
 
-
 * COMMENT Rook Configuration
 You must define the following code blocks in your own configuration:
 
@@ -69,13 +68,47 @@ apt -qq update && apt install -y nfs-common
 EOF
 #+end_src
 
-* rook-nfs-system/pvc.yaml
-#+begin_src yaml :noweb yes :eval no :tangle rook-nfs-system/pvc.yaml
+* Check services
+Once you've applied the manifests by committing the tangled files, check the
+operator is running:
+
+#+begin_src shell :noweb yes :eval never-export :exports code :results output
+<<kubectl>> -n rook-nfs-system get all
+#+end_src
+
+#+RESULTS:
+: NAME                                     READY   STATUS    RESTARTS   AGE
+: pod/rook-nfs-operator-6cdc448676-x28rr   1/1     Running   0          107m
+: 
+: NAME                                READY   UP-TO-DATE   AVAILABLE   AGE
+: deployment.apps/rook-nfs-operator   1/1     1            1           107m
+: 
+: NAME                                           DESIRED   CURRENT   READY   AGE
+: replicaset.apps/rook-nfs-operator-6cdc448676   1         1         1       107m
+
+And check the nfs server is running:
+
+#+begin_src shell :noweb yes :eval never-export :exports code :results output
+<<kubectl>> -n rook-nfs get all
+#+end_src
+
+#+RESULTS:
+: NAME             READY   STATUS    RESTARTS   AGE
+: pod/rook-nfs-0   2/2     Running   0          11m
+: 
+: NAME               TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)            AGE
+: service/rook-nfs   ClusterIP   10.43.190.169   <none>        2049/TCP,111/TCP   11m
+: 
+: NAME                        READY   AGE
+: statefulset.apps/rook-nfs   1/1     11m
+
+* rook-nfs/pvc.yaml
+#+begin_src yaml :noweb yes :eval no :tangle rook-nfs/pvc.yaml
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nfs-default-claim
-  namespace: rook-nfs-system
+  namespace: rook-nfs
 spec:
   accessModes:
   - ReadWriteOnce
@@ -83,13 +116,13 @@ spec:
     requests:
       storage: <<ROOK_PVC_SIZE>>
 #+end_src
-* rook-nfs-system/nfs.yaml
-#+begin_src yaml :noweb yes :eval no :tangle rook-nfs-system/nfs-server.yaml
+* rook-nfs/nfs.yaml
+#+begin_src yaml :noweb yes :eval no :tangle rook-nfs/nfs-server.yaml
 apiVersion: nfs.rook.io/v1alpha1
 kind: NFSServer
 metadata:
   name: rook-nfs
-  namespace: rook-nfs-system
+  namespace: rook-nfs
 spec:
   replicas: 1
   exports:
@@ -102,6 +135,14 @@ spec:
   annotations:
     rook: nfs
 #+end_src
+* rook-nfs/kustomization.yaml
+#+begin_src yaml :noweb yes :eval no :tangle rook-nfs/kustomization.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+- pvc.yaml
+- nfs-server.yaml
+#+end_src
 * rook-nfs-system/kustomization.yaml
 
 #+begin_src yaml :noweb yes :eval no :tangle rook-nfs-system/kustomization.yaml
@@ -111,5 +152,5 @@ resources:
 - https://raw.githubusercontent.com/rook/rook/<<ROOK_VERSION>>/cluster/examples/kubernetes/nfs/common.yaml
 - https://raw.githubusercontent.com/rook/rook/<<ROOK_VERSION>>/cluster/examples/kubernetes/nfs/operator.yaml
 - https://raw.githubusercontent.com/rook/rook/<<ROOK_VERSION>>/cluster/examples/kubernetes/nfs/rbac.yaml
-- nfs-server.yaml
 #+end_src
+
