--- a/lib/rook-nfs.org
+++ b/lib/rook-nfs.org
@@ -134,6 +134,20 @@ spec:
       claimName: nfs-default-claim
   annotations:
     rook: nfs
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  labels:
+    app: rook-nfs
+  name: rook-nfs-share1
+parameters:
+  exportName: share1
+  nfsServerName: rook-nfs
+  nfsServerNamespace: rook-nfs
+provisioner: nfs.rook.io/rook-nfs-provisioner
+reclaimPolicy: Delete
+volumeBindingMode: Immediate
 #+end_src
 * rook-nfs/kustomization.yaml
 #+begin_src yaml :noweb yes :eval no :tangle rook-nfs/kustomization.yaml
