--- a/lib/sealed_secrets.org
+++ b/lib/sealed_secrets.org
@@ -1,13 +1,35 @@
-This Org file is not an appropriate place to store private things like passwords
-or API tokens, because it may accidentally be published to the web. These things
-should be stored in Secrets, controlled only by your cluster. To keep secrets
-local to this config, the use of [[https://github.com/bitnami-labs/sealed-secrets][Sealed Secrets]] allows us to store an encrypted
-copy of the secrets in our git repository. Only the cluster can decrypt sealed
-secrets.
-* Install bitnami-labs/sealed-secrets to the cluster
-You should have already installed the command line client (See =Workstation
-Tools=). Now it's time to install the cluster side portion:
+Everyone knows you should not store private things like passwords or API tokens
+directly in source code, because it may accidentally get published. These things
+should be stored in Secrets, controlled only by your cluster and exposed as
+environment variables or files mounted to your authorized Pods. However, keeping
+these secrets local to this config is still desirable, so the use of [[https://github.com/bitnami-labs/sealed-secrets][Sealed
+Secrets]] allows us to store an encrypted copy of the secrets in your git
+repository. Only the cluster can decrypt sealed secrets.
+
+* COMMENT Sealed Secrets Config
+You must declare the following variables in your Org document:
+
+: ** Sealed Secrets Config
+: *** SEALED_SECRETS_VERSION
+:     Choose the [[https://github.com/bitnami-labs/sealed-secrets/releases][release version for Sealed Secrets]]
+:     #+name: SEALED_SECRETS_VERSION
+:     #+begin_src config :noweb yes :eval no
+:     v0.14.1
+:     #+end_src
+
+* COMMENT manually deploy Sealed Secrets
+If you need to use Secrets before you have flux installed, you can manually
+deploy:
 
 #+begin_src shell :noweb yes :eval never-export :exports code
-kubectl --kubeconfig=<<KUBE_CONFIG>> apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/<<SEALED_SECRETS_VERSION>>/controller.yaml
+<<kubectl>> apply -k <<SRC_DIR>>/kube-system/sealed-secrets/
+#+end_src
+
+* kube-system/sealed-secrets/kustomization.yaml
+#+name: kube-system/sealed-secrets/kustomization.yaml
+#+begin_src yaml :noweb yes :eval no :tangle kube-system/sealed-secrets/kustomization.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+- https://github.com/bitnami-labs/sealed-secrets/releases/download/<<SEALED_SECRETS_VERSION>>/controller.yaml
 #+end_src
